# identity-samples

./: .gitignore  CODEOWNERS  README.md
CredentialProvider/wasm/matcher-rs/: .gitignore  Cargo.toml  build.sh  generate_license.sh  test.sh
CredentialProvider/wasm/matcher-rs/src/: base64url.rs  bindings.rs  credman.rs  dcql.rs  issuance.rs  issuance_matcher.rs  json_value.rs  lib.rs  logger.rs  openid4vci.rs  openid4vp.rs  openid4vp_models.rs  reporter.rs  simple_allocator.rs  test_utils.rs
CredentialProvider/wasm/matcher-rs/testdata/: TC08_MdocMismatch_expected.json  TC08_MdocMismatch_request.json  TC09_SdjwtMatch_expected.json  TC09_SdjwtMatch_request.json  TC10_SdjwtMismatch_request.json  TC11_InlineIssuanceFallback_request.json  TC12_MissingFormat_request.json  TC14_MatchSpecificClaims_expected.json  TC14_MatchSpecificClaims_request.json  TC15_MatchNestedClaims_expected.json  TC15_MatchNestedClaims_request.json  TC16_FailMissingClaims_expected.json  TC16_FailMissingClaims_request.json  TC17_MatchClaimValuesBool_expected.json  TC17_MatchClaimValuesBool_request.json  TC18_FailClaimValuesBool_expected.json  TC18_FailClaimValuesBool_request.json  TC19_MatchClaimValuesInt_expected.json  TC19_MatchClaimValuesInt_request.json  TC20_FailClaimValuesInt_request.json  TC21_MatchFirstClaimSet_request.json  TC22_MatchSecondClaimSet_expected.json  TC22_MatchSecondClaimSet_request.json  TC23_FailAllClaimSets_expected.json  TC23_FailAllClaimSets_request.json  TC24_DcqlQuerySingle_request.json  TC25_DcqlQuerySetMatch_expected.json  TC25_DcqlQuerySetMatch_request.json  (+22 more)
(+712 files in other folders)
