[package]
name = "matcher-rs"
version = "0.1.0"
authors = ["rensiyuan"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nanoserde = "0.1"
log = "0.4"

[features]
default = ["static_log_off"]
static_log_off = ["log/max_level_off"]
logging = []

[dev-dependencies]

[build-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
